Add robots.txt, sitemap.xml, and meta description tag in index.html
- Added robots.txt for search engine instructions
- Included sitemap.xml to facilitate search engine indexing
- Added meta description tag in index.html for better SEO

--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
-<!doctype html>
-<html lang="en" >
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/DashboardIcon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Admin Dashboard with BarChart, Calendar, Contacts, GeographyChart, Invoices, LineChart, ManageTeam, PieChart, ProfileForm." />
+  <meta name="robots" content="index, follow">
+
   <link rel="stylesheet" href="/src/assets/css/Robot-Font.css">
-  <title>Admin Dashboard</title>
+
+  <title>Admin Dashboard - Comprehensive Overview and Tools</title>
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "Admin Dashboard",
+      "description": "Comprehensive admin dashboard with charts, calendar, contacts, and more."
+    }
+  </script>
 </head>
 
 <body>
