Make the Calendar component responsive
- Updated Calendar.jsx to ensure the calendar is responsive across different screen sizes.
- Modified styles and layout to adapt to various device widths.
- Tested on multiple devices to confirm responsive behavior.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
 
 <head>
   <meta charset="UTF-8" />
+  
   <link rel="icon" type="image/svg+xml" href="/DashboardIcon.png" />
+  
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description"
-    content="Admin Dashboard with BarChart, Calendar, Contacts, GeographyChart, Invoices, LineChart, ManageTeam, PieChart, ProfileForm." />
+
+  <meta name="description" content="Admin Dashboard with BarChart, Calendar, Contacts, GeographyChart, 
+    Invoices, LineChart, ManageTeam, PieChart, ProfileForm." />
+
   <meta name="robots" content="index, follow">
+
   <link rel="stylesheet" href="/src/assets/css/Robot-Font.css">
+
   <title>Admin Dashboard - Comprehensive Overview and Tools</title>
+
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
