--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 
 <head>
   <meta charset="UTF-8" />
-  
-  <link rel="icon" type="image/svg+xml" href="/DashboardIcon.png" />
-  
+
+  <link rel="icon" type="image/webp" href="/DashboardIcon.webp" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <meta name="description" content="Admin Dashboard with BarChart, Calendar, Contacts, GeographyChart, 
     Invoices, LineChart, ManageTeam, PieChart, ProfileForm." />
 
-  <meta name="robots" content="index, follow">
+  <meta name="robots" content="index, follow" />
 
-  <link rel="stylesheet" href="/src/assets/css/Robot-Font.css">
+  <link rel="stylesheet" href="/src/assets/css/Robot-Font.css" />
 
   <title>Admin Dashboard - Comprehensive Overview and Tools</title>
 
